objects/PerformanceCriteria__c.object
<CustomObject>
    <label>Performance Criteria</label>
    <pluralLabel>Performance Criterias</pluralLabel>
    <nameField>
        <label>Performance Criteria Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ResponseTime__c</fullName>
        <label>Response Time</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Throughput__c</fullName>
        <label>Throughput</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>ResourceUtilization__c</fullName>
        <label>Resource Utilization</label>
        <type>Percent</type>
        <precision>3</precision>
        <scale>2</scale>
    </fields>
</CustomObject>